@@ -7,6 +7,7 @@ Lib/
 * Fixed LDAP URL parsing with four ? but no real extensions
 * ldap.ldapobject.LDAPObject.rename_s() now also accepts arguments
   serverctrls and clientctrls
+* Removed untested and undocumented class ldap.ldapobject.SmartLDAPObject
 
 Modules/
 * Make use of LDAP_OPT_X_TLS_NEWCTX only if available in
